# python-rs

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  test_fizzbuzz.py
src/: ast.rs  builtins.rs  bytecode.rs  compiler.rs  error.rs  lexer.rs  main.rs  object.rs  parser.rs  vm.rs
tests/: target_pandas_numpy.py
